Fixed double border layer on table

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -44,9 +44,8 @@ main>*:last-of-type {
     display: inline-grid;
     grid-template-columns: repeat(auto-fill, minmax(20px, 1fr));
     display: none;
-    border-bottom: 3px solid black;
-    border-left: 3px solid black;
     margin-bottom: 3rem;
+    border-left: 3px solid black;
     border-top: 3px solid black;
 }
 
@@ -59,8 +58,8 @@ main>*:last-of-type {
     padding: 15px;
     text-align: center;
     /*   border-top: 3px solid black;*/
-    border-right: 3px solid black;
     margin: 0;
+    border-right: 3px solid black;
     border-bottom: 3px solid black;
 }
 
